Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -53,7 +53,7 @@
         },
         "outputId": "2fa3429f-19f0-442d-8d88-c0f89cda6414"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3839,7 +3839,7 @@
         },
         "outputId": "c88d40b3-a6ad-4a40-815a-9f3599d57d40"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3853,7 +3853,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The initial input_text was a file of 936 rows, I just copy and paste 4 times these rows to get a bigger input (3752) and times for the computation bigger and better comparable"
+        "The initial input_text was a file of 936 rows, I just copy and paste 4 times these rows to get a bigger input (3752). I also add them to increase the computation's time and better compare the performances with a different number of parallel process."
       ],
       "metadata": {
         "id": "wKaHU_c0O769"
@@ -3921,7 +3921,7 @@
         },
         "outputId": "f18d1bab-f57f-45f3-c656-6e9d930b08d1"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3931,6 +3931,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I add 1 (from 80 to 81) to the LINELENGHT since the function std::strcpy add the character '\\0' at the end."
+      ],
+      "metadata": {
+        "id": "ndPcMpmr1Uj0"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4000,7 +4009,7 @@
         },
         "outputId": "40f61034-76e3-4e75-97da-07ad7aa97ea4"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4243,7 +4252,7 @@
         "id": "DabWL2E0Nt8q",
         "outputId": "a776c86c-2fd0-4a3a-a793-a7d3913abdce"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4253,6 +4262,85 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Workflow\n",
+        "we have:\n",
+        "- N = total number of rows in the input file\n",
+        "- size = number of parallel processes \n",
+        "- n = number of rows with the searched string\n"
+      ],
+      "metadata": {
+        "id": "IpLYCb_v1yU8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. process 0 count and collects all the rows from the input file --> O(N)\n",
+        "2. P0 calculate the number of data (rows) to send to each process and the displacement (= from wich one they has to start) --> O(size)\n",
+        "3. Send the relative data with a **Scatterv**\n",
+        "4. Each process search the string in their rows in parallel --> O($\\frac{N}{size}$)\n",
+        "5. Each process sends to P0 the rows found with **Gatherv**\n",
+        "6. P0 writes the solution in the output file --> O(n) \n"
+      ],
+      "metadata": {
+        "id": "ILVM1xsH2bqy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I decided to use Scatterv and Gatherv because the division of the rows throw the processes is not always a division with rest 0, so I send 1 additional row to the first process until the rest of the division became 0. \\\\\n",
+        "For example with 3 process I have: $\\frac{3752}{3}$ has rest of 2, the suddivision is P0: 1251 P1: 1251 P2: 1250\n"
+      ],
+      "metadata": {
+        "id": "Us5oWB6A4jK1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The sequential version:\n",
+        "1. The main, and only, process look row by row the input and check if it contains the searched string; It there is write in the output file the specific row. All these operation are done in a single loop --> O(N)"
+      ],
+      "metadata": {
+        "id": "1MHq3qkk40i4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###SpeedUp"
+      ],
+      "metadata": {
+        "id": "L_Uwcc-S-J5Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since the parallel version needs to count, suddivide the hole text at first, distribute the data and at the end write the solution (n usually is << N so this do not requires too much times compared to the first operation), it adds a lot of overhead. In this way the advantage from the searching operation parallelized ($\\frac{N}{size}$) venishing. \\\\\n",
+        "For this reason we can evaluate the parallel e sequential versions of the algorithm for the only search operation:\n",
+        "- $T^* (N) = N$ is the time requested to compute the operation by the BEST sequential algorithm\n",
+        "- $T_{size} (N) = \\frac{N}{size}$ time requested to compute the search operation by (size) parallel processes. Since it is not exactly the same calculated on each process (for a little delay of the OS probably) I just compute the avarage over them. \\\\\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "y2OY_S-35Xum"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We also know that the SpeedUp is the ration between the best single process algorithm over thevparallelized one (on the same data amount):\n",
+        "- $ SU_{size} (N) = \\frac{T^* (N)}{T_{size} (N)} = \\frac{N}{\\frac{N}{size}} = size$"
+      ],
+      "metadata": {
+        "id": "a6KGS5_99n9V"
+      }
     },
     {
       "cell_type": "code",
@@ -4267,7 +4355,7 @@
         "id": "lOEr2Cz0ydsW",
         "outputId": "b3f468ac-a998-48d1-ff85-aa051bb98887"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4291,7 +4379,7 @@
         "id": "ddp3MCmr0uOd",
         "outputId": "95ebdfc3-bc16-433a-d136-cd289cc12bfa"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4307,8 +4395,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "here we can see the overhead explicitally: the only search operation took 0.0009, on the other hand the hole computation requires 0.004 seconds. \\\\\n",
-        "We can also compare it with the performance of the sequence algorithm (that reads the input, search for the world 'more' and write in the output file the solution) that is 0.00069 "
+        "Here we can see the overhead explicit: the only search operation took **0.00098**, on the other hand the hole computation requires **0.00366** seconds. \\\\\n",
+        "We can also compare it with the performance of the sequence algorithm (that reads the input, search for the world 'more' and write in the output file the solution) that is **0.000699** and the only search operation (so removing the write of the output that is expensive) the time became **0.000578**"
       ],
       "metadata": {
         "id": "Ih8gh7FtrUm4"
@@ -4351,7 +4439,7 @@
         "id": "QI0AJFHUICJE",
         "outputId": "64927c1b-46cf-4334-9cb7-43085c0a9474"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4364,6 +4452,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As expected the speedup on the hole algorithm is \n",
+        "$SU_{2} = \\frac{0.000699}{0.002377} = 0.294$ that is less than 1 \\\\\n",
+        "only the search operetion \n",
+        "$SU_{2} = \\frac{0.000578}{0.000295} = 1.96$"
+      ],
+      "metadata": {
+        "id": "Vexxs_IQ_TNo"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4405,7 +4505,7 @@
         "id": "ttHZQDqWIEgl",
         "outputId": "f5a283e1-bbc0-4c92-b001-a0bc8bcb6e04"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4419,6 +4519,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As expected the speedup on the hole algorithm is \n",
+        "$SU_{3} = \\frac{0.000699}{0.003526} = 0.198$ that is less than 1 \\\\\n",
+        "only the search operetion \n",
+        "$SU_{3} = \\frac{0.000578}{0.000213} = 2.71$"
+      ],
+      "metadata": {
+        "id": "mNUK3srIBG8x"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4462,7 +4574,7 @@
         },
         "outputId": "d03362bc-258e-4db4-e2af-c3b69d81b37f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4523,7 +4635,7 @@
         "id": "UdJI1VITIKN7",
         "outputId": "258dfb54-78b1-4e7d-dfc4-41b4f86ab5af"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4539,6 +4651,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As expected the speedup on the hole algorithm is \n",
+        "$SU_{5} = \\frac{0.000699}{0.004780} = 0.146$ that is less than 1 \\\\\n",
+        "only the search operetion \n",
+        "$SU_{5} = \\frac{0.000578}{0.000127} = 4.55$"
+      ],
+      "metadata": {
+        "id": "W-ogXhUSBr_1"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4588,7 +4712,7 @@
         },
         "outputId": "f9ad3e30-6ea5-4a40-bbb3-df2965163613"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4657,7 +4781,7 @@
         },
         "outputId": "f87ea5eb-6d0d-4acc-c4ff-87539a671295"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4745,7 +4869,7 @@
         },
         "outputId": "1edc4b45-c084-44e1-be27-3e382d547383"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4800,7 +4924,7 @@
         },
         "outputId": "2f6fb0d7-6f69-418b-d5b9-e5098d9b8993"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4832,7 +4956,7 @@
         "id": "j7bGlzTXix1Z",
         "outputId": "82fcbf09-8283-4c68-f63e-868c8f7ee811"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4865,7 +4989,7 @@
         "id": "D1M65bcoixpT",
         "outputId": "fb3097f0-904c-40ea-8fdf-169eef1b4565"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4921,7 +5045,7 @@
         "id": "2hTHHRtbXtoD",
         "outputId": "c8c6dbb7-e443-4fbf-884d-942ab3b95e34"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4971,7 +5095,7 @@
         "id": "kHjH-h4NHS65",
         "outputId": "529cf009-d236-4276-cb34-50c0b81aa5fa"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5035,7 +5159,7 @@
         "id": "af3StBk7WCva",
         "outputId": "95884668-743f-4501-a72e-44daf36e93f4"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5059,7 +5183,7 @@
         "id": "pBcH7sFqTSao",
         "outputId": "5be54093-0476-4c11-860f-112dd904c43a"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5083,7 +5207,7 @@
         "id": "2mwM9d89UhoF",
         "outputId": "64cb2e58-4cb0-4aee-9cb7-6472fe96b73a"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5149,7 +5273,7 @@
         "id": "XsFucFXmyf00",
         "outputId": "0322119b-0608-4aeb-832e-b18363b0d0ba"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5201,7 +5325,7 @@
         "id": "NislCa-Qy4oJ",
         "outputId": "ab36df1d-dd11-4890-eb53-243660f7bf5b"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5263,7 +5387,7 @@
         "id": "pPph7-l9wI9E",
         "outputId": "ab80300a-9e72-4efa-c1db-1698f1152e26"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5287,7 +5411,7 @@
         "id": "hWofHGynzRMc",
         "outputId": "055de4e9-b628-4760-a3be-9073d33401f2"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5311,7 +5435,7 @@
         "id": "mr9V1vlezRIw",
         "outputId": "41765ccb-a06c-4208-e45a-af85500ac492"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
