Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -29,6 +29,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#AAPP Challenge: Parallelize Grep with MPI\n",
+        "Challenge for the second part of the course (Parallel Programming). \\\\\n",
+        "\n",
+        "Developed by Sofia Martellozzo (10623060)"
+      ],
+      "metadata": {
+        "id": "VKKZBQeQzJco"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# MPI Grep Challenge\n",
         "\n",
         "Starting from the provided code, that differs slightly from what was seen in the first lecture about MPI, implement a parallel grep function working on any number of cores. \n",
@@ -4593,6 +4605,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "As expected the speedup on the whole algorithm is \n",
+        "$SU_{4} = \\frac{0.000699}{0.006248} = 0.11$ that is less than 1 \\\\\n",
+        "only the search operation \n",
+        "$SU_{4} = \\frac{0.000578}{0.000175} = 3.3$"
+      ],
+      "metadata": {
+        "id": "NtXGaTeGzlHW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "###5 process\n",
         "- The process 0 will read **751** rows, that starts from index 0 \\\\\n",
         "That are 60831 char!\n",
@@ -4729,6 +4753,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As expected the speedup on the whole algorithm is \n",
+        "$SU_{6} = \\frac{0.000699}{0.009809} = 0.071$ that is less than 1 \\\\\n",
+        "only the search operation \n",
+        "$SU_{6} = \\frac{0.000578}{0.000120} = 4.82$"
+      ],
+      "metadata": {
+        "id": "r8bM5AxJ0gDo"
+      }
     },
     {
       "cell_type": "markdown",
